--- a/styles/about.css
+++ b/styles/about.css
@@ -1,13 +1,17 @@
 @import url('../style.css');
 
+
+
 .metade{
     display: flex;
-    max-width: 100%; /* Ajuste conforme necessário */
+    max-width: 100%;
     margin: 0 auto;
     justify-content: center;
     align-items: center;
     height: 100vh;
     gap: 20px;
+    flex-wrap: wrap;
+    flex-direction: row;
 }
 
 p{
@@ -22,17 +26,19 @@ p::selection{
     font-weight: bolder;
 }
 
-.sessao_p{
-    max-width: 50%;
-    padding: 100px;
+.sessao_p {
+    max-width: 50%; /* Ocupa metade da largura disponível */
+    padding: 20px; 
     text-align: left;
 }
-.sessao_i{
-    max-width: 50%;
 
-    
+.sessao_i {
+    max-width: 50%; /* Ocupa metade da largura disponível */
+    padding: 20px;
 }
 
-.fotos{
-    width: 380px;
+.fotos {
+    width: 100%; /* A imagem ocupará a largura completa do container */
+    max-width: 380px;
+    height: auto; 
 }
