--- a/styles/projetos.css
+++ b/styles/projetos.css
@@ -1,18 +1,24 @@
 @import url('../style.css');
 
+* {
+    box-sizing: border-box;
+}
 
 .card {
     background-color: var(--bg-color);
     box-shadow: 0px 4px 4px var(--cinza);
     border-radius: 10px;
     border: 4px solid var(--cor-principal);
-    margin-left: 4em;
-    width: 20%;
-    height: 50vh;
+    max-width: 400px; 
+    width: 100%;
+    height: auto;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     padding: 1em;
+    margin: 4em;
+    overflow: hidden;
+    
 }
 
 .cards {
@@ -22,6 +28,8 @@
     max-width: 100%;
     margin: 0 auto;
     height: 100vh;
+    flex-wrap: wrap;
+    padding: 1em;
 }
 
 .card_img {
