--- a/styles/about.css
+++ b/styles/about.css
@@ -42,3 +42,27 @@ p::selection{
     max-width: 380px;
     height: auto; 
 }
+
+@media (max-width: 600px) {
+    .metade {
+        flex-direction: column; 
+        height: auto;
+        gap: 10px; 
+        padding: 10px;
+    }
+
+    .sessao_p, .sessao_i {
+        max-width: 100%; 
+        padding: 10px;
+        text-align: center; 
+    }
+
+    .fotos {
+        max-width: 100%; 
+        height: auto; 
+    }
+
+    p{
+        font-size: 15px;
+    }
+}
