--- a/styles/academic.css
+++ b/styles/academic.css
@@ -9,3 +9,14 @@ section div img{
     width: 30vw;
     margin: 50px;
 }
+@media (max-width: 600px) {
+    section div {
+        flex-direction: column; 
+        padding: 10px; 
+    }
+
+    section div img {
+        width: 80vw; 
+        margin: 20px auto; 
+    }
+}
